hphp/test/slow/emitter_fuzzy/coloncolon_in_attribute.php.expectf
Fatal error: unknown class RestraintType in %s on line 5
